--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -68,6 +68,20 @@ services:
           memory: 64M
     volumes:
       - ../modulo-informacoes-cadastrais:/var/www
+    links:
+      - postgresql-db-shippingcompany
+    networks:
+      - teste
+  service-informacoes-cadastrais-migrations:
+    image: service-informacoes-cadastrais
+    working_dir: /var/www/
+    volumes:
+      - ../modulo-informacoes-cadastrais:/var/www
+    links:
+      - postgresql-db-shippingcompany
+    depends_on:
+      - postgresql-db-shippingcompany
+    command: ./docker-compose/configure.sh
     networks:
       - teste
   nginx-service-informacoes-cadastrais:
@@ -201,6 +215,20 @@ services:
     networks:
       - teste
     container_name: postgresql-db-auth
+  postgresql-db-shippingcompany:
+    image: postgres
+    restart: always
+    env_file:
+      - ../modulo-informacoes-cadastrais/docker-compose/postgres/database.env
+    ports:
+      - "25432:5433"
+    volumes:
+      - ../modulo-informacoes-cadastrais/datadbs/postgres:/var/lib/postgresql/data
+      - ../modulo-informacoes-cadastrais/docker-compose/postgres/dumps/create-tables.sql:/docker-entrypoint-initdb.d/create-tables.sql
+    networks:
+      - teste
+    command: -p 5433
+    container_name: postgresql-db-shippingcompany
 networks:
   teste:
     driver: bridge
