--- a/modulo-dw-bi/.env.example
+++ b/modulo-dw-bi/.env.example
@@ -1,8 +1,8 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:dwpeQxlljX3On0RV99h45OsyvqhdELwy5jWjQtxHQqU=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://modulo-dw-bi.test
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
