--- a/modulo-gestao-estrategia/.env.example
+++ b/modulo-gestao-estrategia/.env.example
@@ -1,8 +1,8 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:jtTGrdFbpH1oD+mLgItbz37NuchB6BYPbVINNhO7Btk=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://modulo-gestao-estrategia.test
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
