--- a/modulo-informacoes-cadastrais/.env.example
+++ b/modulo-informacoes-cadastrais/.env.example
@@ -1,18 +1,18 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:bq+QtCTovzWF2Mc+uXAvX4kCTtMNMfK5USnwpnnKkeo=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://modulo-informacoes-cadastrais.test
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=modulo_informacoes_cadastrais
-DB_USERNAME=root
-DB_PASSWORD=
+DB_CONNECTION=postgresql-shippingcompany
+DB_HOST=postgresql-db-shippingcompany
+DB_PORT=5432
+DB_DATABASE=gsl_shippingcompany
+DB_USERNAME=postgres
+DB_PASSWORD=101292
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
