--- a/modulo-servicos-cliente/.env.example
+++ b/modulo-servicos-cliente/.env.example
@@ -1,8 +1,8 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:c3qe9M1679s/DAKC4IGPy5+m92B4dIM6YPOveq2p51c=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://modulo-servicos-cliente.test
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
