--- a/gateway/docker-compose/php/local.ini
+++ b/gateway/docker-compose/php/local.ini
@@ -1,5 +1,14 @@
 date.timezone =America/Sao_Paulo
-upload_max_filesize=40M
-post_max_size=40M
-memory_limit=512M
-max_execution_time = 0
+upload_max_filesize=32M
+post_max_size=32M
+memory_limit=256M
+max_execution_time = 300
+html errors = off
+precision = 14
+output_buffering = 4096
+serialize_precision = 17
+max_input_time = 60
+max_input_vars = 5000
+log_errors_max_len = 1024
+max_file_uploads = 20
+default_socket_timeout = 60
