--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,9 +13,9 @@ services:
       replicas: 1
       resources:
         limits:
-          memory: 128M
+          memory: 256M
         reservations:
-          memory: 64M
+          memory: 128M
     links:
       - postgresql-db-auth
       - nginx-service-informacoes-cadastrais
@@ -49,6 +49,13 @@ services:
     restart: unless-stopped
     volumes:
       - ./gateway:/var/www
+    deploy:
+      replicas: 1
+      resources:
+        limits:
+          memory: 256M
+        reservations:
+          memory: 128M
     ports:
       - "9091:80"
     depends_on:
@@ -68,9 +75,9 @@ services:
       replicas: 1
       resources:
         limits:
-          memory: 128M
+          memory: 256M
         reservations:
-          memory: 64M
+          memory: 128M
     links:
       - postgresql-db-shippingcompany
     networks:
@@ -116,9 +123,9 @@ services:
       replicas: 1
       resources:
         limits:
-          memory: 128M
+          memory: 256M
         reservations:
-          memory: 64M
+          memory: 128M
     networks:
       - gateway-network
   nginx-service-servicos-cliente:
@@ -150,9 +157,9 @@ services:
       replicas: 1
       resources:
         limits:
-          memory: 128M
+          memory: 256M
         reservations:
-          memory: 64M
+          memory: 128M
     networks:
       - gateway-network
   nginx-service-gestao-estrategia:
@@ -184,9 +191,9 @@ services:
       replicas: 1
       resources:
         limits:
-          memory: 128M
+          memory: 256M
         reservations:
-          memory: 64M
+          memory: 128M
     networks:
       - gateway-network
   nginx-service-dw-bi:
